src/objects/Furniture_Order__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Bedroom_10__c</fullName>
        <label>Additional Bedroom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Twin w/ Headboard</fullName>
                </value>
                <value>
                    <fullName>2 Twins w/ Headboards</fullName>
                </value>
                <value>
                    <fullName>Queen Bed w/ Headboard (Default)</fullName>
                </value>
                <value>
                    <fullName>Queen Upgrade to Pillowtop</fullName>
                </value>
                <value>
                    <fullName>King Bed w/ Headboard</fullName>
                </value>
                <value>
                    <fullName>King Upgrade</fullName>
                </value>
                <value>
                    <fullName>King Upgrade w/ Pillowtop</fullName>
                </value>
                <value>
                    <fullName>Home Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Bedroom_1__c</fullName>
        <label>Additional Bedroom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Twin w/ Headboard</fullName>
                </value>
                <value>
                    <fullName>2 Twins w/ Headboards</fullName>
                </value>
                <value>
                    <fullName>Queen Bed w/ Headboard (Default)</fullName>
                </value>
                <value>
                    <fullName>Queen Upgrade to Pillow Top</fullName>
                </value>
                <value>
                    <fullName>King Bed w/ Headboard</fullName>
                </value>
                <value>
                    <fullName>King Upgrade</fullName>
                </value>
                <value>
                    <fullName>King Upgrade with Pillow Top</fullName>
                </value>
                <value>
                    <fullName>Home Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Bedroom_2__c</fullName>
        <label>Additional Bedroom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Twin w/ Headboard</fullName>
                </value>
                <value>
                    <fullName>2 Twins w/ Headboards</fullName>
                </value>
                <value>
                    <fullName>Queen Bed w/ Headboard (Default)</fullName>
                </value>
                <value>
                    <fullName>Queen Upgrade to Pillow Top</fullName>
                </value>
                <value>
                    <fullName>King Bed w/ Headboard</fullName>
                </value>
                <value>
                    <fullName>King Upgrade</fullName>
                </value>
                <value>
                    <fullName>King Upgrade with Pillow Top</fullName>
                </value>
                <value>
                    <fullName>Home Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Dining_Room__c</fullName>
        <label>Additional Dining Room</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dining Chairs (2)</fullName>
                </value>
                <value>
                    <fullName>Dining Chairs (4) (Default)</fullName>
                </value>
                <value>
                    <fullName>Dining Chairs (6)</fullName>
                </value>
                <value>
                    <fullName>Dining Chairs (8)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Living_Room__c</fullName>
        <label>Additional Living Room</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Living Room Chair</fullName>
                </value>
                <value>
                    <fullName>Loveseat</fullName>
                </value>
                <value>
                    <fullName>Loveseat or Chair (Default)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appliance_Cost__c</fullName>
        <label>Appliance_Cost</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appliances__c</fullName>
        <label>Appliances</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bathrooms_Needing_Housewares__c</fullName>
        <label>Bathrooms Needing Housewares</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Housewares__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BedBath_Housewares_Cost__c</fullName>
        <label>Bed &amp; Bath Housewares Cost</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bedrooms_Needing_Housewares__c</fullName>
        <label>Bedrooms Needing Housewares</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Housewares__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billable_Party_Appliance_Cost__c</fullName>
        <label>Billable Party</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjuster</fullName>
                </value>
                <value>
                    <fullName>Policyholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billable_Party_BedBath_Housewares_Cost__c</fullName>
        <label>Billable Party</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjuster</fullName>
                </value>
                <value>
                    <fullName>Policyholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billable_Party_Cost__c</fullName>
        <label>Billable Party</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjuster</fullName>
                </value>
                <value>
                    <fullName>Policyholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billable_Party_Delivery_Fee__c</fullName>
        <label>Billable Party</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjuster</fullName>
                </value>
                <value>
                    <fullName>Policyholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billable_Party_Deposit__c</fullName>
        <label>Billable Party</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjuster</fullName>
                </value>
                <value>
                    <fullName>Policyholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billable_Party_Electronics_Cost__c</fullName>
        <label>Billable Party</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjuster</fullName>
                </value>
                <value>
                    <fullName>Policyholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billable_Party_Furniture_Cost__c</fullName>
        <label>Billable Party</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjuster</fullName>
                </value>
                <value>
                    <fullName>Policyholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billable_Party_Kitchen_Housewares_Cost__c</fullName>
        <label>Billable Party</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjuster</fullName>
                </value>
                <value>
                    <fullName>Policyholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billable_Party_Other_Housewares_Cost__c</fullName>
        <label>Billable Party</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjuster</fullName>
                </value>
                <value>
                    <fullName>Policyholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billable_Party_Pet_Fee__c</fullName>
        <label>Billable Party</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjuster</fullName>
                </value>
                <value>
                    <fullName>Policyholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billable_Party_Setup_Fee__c</fullName>
        <label>Billable Party</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjuster</fullName>
                </value>
                <value>
                    <fullName>Policyholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clothes_Dryer__c</fullName>
        <label>Clothes Dryer</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Appliances__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clothes_Washer__c</fullName>
        <label>Clothes Washer</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Appliances__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Created_After_Move_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created After Move-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Fee__c</fullName>
        <label>Delivery Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <label>Deposit</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dining_Room__c</fullName>
        <label>Dining Room</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dining Chairs (2)</fullName>
                </value>
                <value>
                    <fullName>Dining Chairs (4)</fullName>
                </value>
                <value>
                    <fullName>Dining Chairs (4) (Default)</fullName>
                </value>
                <value>
                    <fullName>Dining Chairs (6) (Default)</fullName>
                </value>
                <value>
                    <fullName>Dining Chairs (6)</fullName>
                </value>
                <value>
                    <fullName>Dining Chairs (8)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dryer_Type__c</fullName>
        <label>Dryer Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Clothes_Dryer__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Electric</fullName>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Electronics_Cost__c</fullName>
        <label>Electronics Cost</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_Comments__c</fullName>
        <label>Furniture Comments</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Furniture_Cost__c</fullName>
        <label>Furniture_Cost</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_Level__c</fullName>
        <label>Furniture Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Housewares__c</fullName>
        <label>Housewares</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_Pictures__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>PH would like pictures included in the order</inlineHelpText>
        <label>Include Pictures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_partial_order__c</fullName>
        <label>Is this a partial order?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kitchen_Housewares_Cost__c</fullName>
        <label>Kitchen Housewares Cost</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Living_Room__c</fullName>
        <label>Living Room</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Living Room Chair</fullName>
                </value>
                <value>
                    <fullName>Loveseat</fullName>
                </value>
                <value>
                    <fullName>Loveseat or Chair (Default)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Bedroom__c</fullName>
        <label>Master Bedroom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Twin w/ Headboard</fullName>
                </value>
                <value>
                    <fullName>2 Twins w/ Headboards</fullName>
                </value>
                <value>
                    <fullName>Queen Bed w/ Headboard (Default)</fullName>
                </value>
                <value>
                    <fullName>Queen Upgrade to Pillow Top</fullName>
                </value>
                <value>
                    <fullName>King Bed w/ Headboard</fullName>
                </value>
                <value>
                    <fullName>King Upgrade</fullName>
                </value>
                <value>
                    <fullName>King Upgrade with Pillow Top</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Microwave__c</fullName>
        <label>Microwave</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Appliances__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migration_PTID__c</fullName>
        <description>used for linking existing furniture orders to service request</description>
        <externalId>true</externalId>
        <label>Migration_PTID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Housewares_Cost__c</fullName>
        <label>Other Housewares Cost</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pet_Fee__c</fullName>
        <label>Pet Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement</label>
        <referenceTo>Placement__c</referenceTo>
        <relationshipLabel>Furniture Orders</relationshipLabel>
        <relationshipName>Furniture_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Range_Type__c</fullName>
        <label>Range Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Range__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Electric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Range__c</fullName>
        <label>Range</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Appliances__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ready_For_VSS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a furniture order is set to completed status and there is a valid search record on the corrisponding service request this field is set to true. Keeps furniture orders from being picked up by VSS without a valid search record.</description>
        <label>Ready For VSS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refrigerator__c</fullName>
        <label>Refrigerator</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Appliances__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Furniture_Delivery_Date__c</fullName>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Searches__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Search</label>
        <referenceTo>Searches__c</referenceTo>
        <relationshipLabel>Furniture Orders</relationshipLabel>
        <relationshipName>Furniture_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sent_to_VSS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this furniture order has been sent to VSS</description>
        <label>Sent to VSS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Request_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request Lookup</label>
        <referenceTo>ServiceRequest__c</referenceTo>
        <relationshipLabel>Furniture Orders</relationshipLabel>
        <relationshipName>Furniture_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Request</label>
        <referenceTo>ServiceRequest__c</referenceTo>
        <relationshipLabel>Furniture Orders (Service Request)</relationshipLabel>
        <relationshipName>Furniture_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Setup_Fee__c</fullName>
        <label>Setup Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Working</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Furniture Order</label>
    <listViews>
        <fullName>Furniture_Furniture_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>Furniture</label>
        <queue>Furniture</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>FO-{00000}</displayFormat>
        <label>Furniture Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Furniture Orders</pluralLabel>
    <recordTypes>
        <fullName>Cancelled_Furniture_Order</fullName>
        <active>true</active>
        <description>Cancelled furniture orders</description>
        <label>Cancelled Furniture Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Completed_Furniture_Order</fullName>
        <active>true</active>
        <description>Completed furniture orders</description>
        <label>Completed Furniture Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Working_Furniture_Order</fullName>
        <active>true</active>
        <description>Working furniture orders</description>
        <label>Working Furniture Order</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Cannot_edit_cancelled_furniture_orders</fullName>
        <active>false</active>
        <description>Cancelled furniture orders cannot be edited</description>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE(Status__c), &apos;Cancelled&apos;)</errorConditionFormula>
        <errorMessage>Cancelled Furniture Orders cannot be edited</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Full_furniture_applianes</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Status__c , &apos;Completed&apos;) &amp;&amp; ISPICKVAL(  Is_partial_order__c , &apos;No&apos;) &amp;&amp;  ISPICKVAL( Appliances__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Appliances__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Full_furniture_housewares</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Status__c , &apos;Completed&apos;) &amp;&amp; ISPICKVAL(  Is_partial_order__c , &apos;No&apos;) &amp;&amp;  ISPICKVAL( Housewares__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Housewares__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Full_furniture_order_dining_room</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Status__c , &apos;Completed&apos;) &amp;&amp; ISPICKVAL(  Is_partial_order__c , &apos;No&apos;) &amp;&amp;  ISPICKVAL( Dining_Room__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Dining_Room__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Full_furniture_order_living_room</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Status__c , &apos;Completed&apos;) &amp;&amp; ISPICKVAL(  Is_partial_order__c , &apos;No&apos;) &amp;&amp;  ISPICKVAL( Living_Room__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Living_Room__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Full_furniture_order_master_bedroom</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Status__c , &apos;Completed&apos;) &amp;&amp; ISPICKVAL(  Is_partial_order__c , &apos;No&apos;) &amp;&amp;  ISPICKVAL( Master_Bedroom__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Master_Bedroom__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Partial_furniture_order_comments</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Status__c , &apos;Completed&apos;) &amp;&amp; ISPICKVAL(Is_partial_order__c , &apos;Yes&apos;) &amp;&amp;  Furniture_Comments__c  = &apos;&apos;</errorConditionFormula>
        <errorDisplayField>Furniture_Comments__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ready_For_VSS_check</fullName>
        <active>false</active>
        <description>Makes sure there is a valid search record on the service request that this furniture order is tied to.</description>
        <errorConditionFormula>IF(Ready_For_VSS__c = false,  IF(ISPICKVAL(Status__c, &apos;Completed&apos;),true,false), false)</errorConditionFormula>
        <errorMessage>Furniture orders cannot be set to completed status until a valid search record is created</errorMessage>
    </validationRules>
</CustomObject>